# devpilot-mcp

./: .env.example  .gitignore  Dockerfile  README.md  coverage.xml  demo.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat  get_gprof  get_objgraph  nanodb-script.py  nanodb_server-script.py  undill
scripts/setup/: USAGE_GUIDE.md  setup.md  setup.sh
src/: __init__.py  config.py  demo.py  integrate.py  models.py  rag.py  resources.py  server.py  tools.py
src/rag/: indexer.py  manager.py
tests/: conftest.py  test_BERT.py  test_config.py  test_model.py  test_resources.py  test_server.py  test_tools.py
